[package]
name = "advent-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
num-complex = "0.4.0"
counter = "0.5.2"
libmath = "0.2.1"
cached = "0.26.2"
trees = "0.4.1"
num = "0.4.0"
pathfinding = "3.0.5"
lazy_static = "1.4.0"